# Flexible-mesh-particle-coupling-with-preCICE

./: .gitattributes  .gitignore  README.md
cfddem_fluidized_bed/: README.md  generate.py  plot_load_balancing.py  plot_particle_flux.py
channel-transport/: parameters.prm  (+2 more)
deal.II-example-step-68-with-preCICE/: .gitattributes  .gitignore  CMakeLists.txt  README.md  fluid.prm  generate_runs.py  parameters.prm  particle.prm  postprocessing.py  precice-config-graph.sh  precice-config.xml  precice-config_1.dot  requirements.txt  run-multiple.sh  run_multiple.py  runs.py  step-68-with-precice.cc  step-68-with-precice.pvsm  step-68.pvsm
deal.II-example-step-68-with-preCICE/animations/: analytical solution (white) vs coupled solution (black) at different grid resolutions and mapping schemes.avi  analytical solution (white) vs coupled solution (black) with different basis functions.avi  analytical solution (white) vs coupled solution (black).avi  analytical solution (white) vs coupled solution (black).pvsm  flow_field.pvsm
deal.II-example-step-68-with-preCICE/postprocessing/: quantify_error.py  requirements.txt
deal.II-example-step-68-with-preCICE/postprocressing/: mapping_error_over_grid_spacing.ipynb  mapping_error_over_time.ipynb  step-68.pvsm  tracking_error.ipynb  tracking_error_over_grid_spacing.ipynb
deal.II-example-step-68-with-preCICE/runs/: .gitignore  generate.py  run.py
deal.II-example-step-68-with-preCICE/runs/convergence_over_refinement/: .gitignore  generate.py  plot_error_over_grid_spacing.ipynb  plot_error_over_time.ipynb  postprocess.ipynb  run.py
(+288 files in other folders)
